# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2012-09-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Rename some Erlang modules to be more intuitive
    * Fix bug in the python/python_c http_req test
    * Fix bug in the ZeroMQ test

2012-08-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the consume parameter to the recv_async CloudI API function
    * Resolve some case issues in the CloudI API function parameters
    * Fix messaging test errors and make messaging an infinite test

2012-08-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix exception handling within the callback functions of the
      Python CloudI API C++ integration
    * Simplify cpg process lookup

2012-08-17 Hardy Jones   <jones3.hardy [at] gmail (dot) com>

	* Fix assignment statement in Python API cloudi.py
	* Fix list conversion to binary in Python API erlang.py
	* Add unit tests (string, list to binary) in Python API erlang.py

2012-08-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Added better thread handling and callback usage to the
      Python CloudI API C++ integration

2012-08-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Complete Python CloudI API C++ integration

2012-08-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add function objects to the C++ CloudI API
    * Fix python CloudI API c integration linking issues
    * Fix various build issues related the the C/C++ CloudI API

2012-07-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update python CloudI API for python version 3

2012-07-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cpg, uuid, and trie applications instead of using modules within
      the CloudI application (this includes making cpg more abstract based on
      the list_pg source code)

2012-07-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Tweaks to list_pg to support external usage
