@@ -604,6 +604,13 @@
         immediate_closest, tcp, 16384,
         5000, 10000, 10000, [api], undefined, 1, 4, 5, 300, []},
     {external,
+        "/tests/messaging/python_c/",
+        "@PYTHON@",
+        "tests/messaging/messaging_c.py",
+        [],
+        immediate_closest, tcp, 16384,
+        5000, 10000, 10000, [api], undefined, 1, 4, 5, 300, []},
+    {external,
         "/tests/messaging/ruby/",
         "@RUBY@",
         "tests/messaging/messaging.rb",
